src/user.css
/* ... */
.profile-userEditDetails-nameInput,
.profile-userEditDetails-textElement:focus {
  background: var(--spice-card) !important;
}

.main-playlistEditDetailsModal-titleInput:focus,
.main-playlistEditDetailsModal-descriptionTextarea:focus,
.profile-userEditDetails-textElement:focus,
.playlist-inlineSearchBox-filterInput:focus {
  border: 1px solid var(--spice-button-active) !important;
}

.playlist-inlineSearchBox-filterInput {
  border: 1px solid var(--spice-card);
}

.main-playlistEditDetailsModal-titleInput,
.main-playlistEditDetailsModal-descriptionTextarea,
.profile-userEditDetails-nameInput,
.playlist-inlineSearchBox-filterInput {
  border-radius: var(--border-radius-2) !important;
}

.profile-userEditDetails-labelText:before {
  bottom: 8px !important;
}

.main-playlistEditDetailsModal-titleInput::placeholder,
.main-playlistEditDetailsModal-descriptionTextarea::placeholder {
  color: var(--spice-text);
}

.main-editImageButton-overlay {
  background-color: rgba(var(--spice-rgb-card), 0.7);
}

/* dialogs */

.main-deletePlaylistDialog-container,
.main-deleteFolderDialog-container {
  background-color: var(--spice-card);
  color: var(--spice-text);
  border-radius: var(--border-radius-1);
}

.main-deletePlaylistDialog-secondaryButton,
.main-deleteFolderDialog-secondaryButton {
  color: var(--spice-button);
}

.main-deletePlaylistDialog-buttonContainer > :last-child,
.main-deleteFolderDialog-buttonContainer > :last-child {
  background-color: var(--spice-notification-error);
}

/* friend activity */
.spotify__container--is-desktop.spotify__os--is-windows
  .Root__top-container--right-sidebar-visible
  .main-topBar-container {
  padding-inline-end: 167px;
}

.main-connectToFacebook-container {
  margin-top: 50px;
}

.main-connectToFacebook-text,
.main-connectToFacebook-disclaimer,
.main-connectToFacebook-headerTitle,
.main-addFriendsView-headerText p {
  color: var(--spice-text);
}

.main-addFriendsView-header {
  margin-top: 16px;
  border-bottom: 1px solid var(--spice-selected-row) !important;
}

.main-addFriendsView-facebookIconWrapper {
  background-color: #008aff !important;
}

.main-addFriendsView-filterInput {
  background-color: var(--spice-card) !important;
  color: var(--spice-text) !important;
}

.main-addFriendsView-filterInput::placeholder {
  color: var(--spice-text) !important;
}

.main-buddyFeed-header {
  opacity: 1 !important;
}

.main-buddyFeed-friendsFeedContainer {
  margin-top: 25px;
}

.main-buddyFeed-findFriendsIcon,
.main-buddyFeed-addFriendPlaceholderIcon {
  color: var(--spice-text) !important;
}

.main-buddyFeed-username a {
  color: var(--spice-text) !important;
}

.main-buddyFeed-artistAndTrackName a,
.main-buddyFeed-activityMetadata,
.main-buddyFeed-timestamp,
.main-buddyFeed-playbackContextLink {
  color: var(--spice-subtext) !important;
}

.main-buddyFeed-friendActivity,
aside[aria-label='Friend Activity'] ol li {
  background-color: var(--spice-card);
  border-radius: var(--border-radius-1);
  margin: 8px;
  padding: 8px 12px 8px 12px;
}

.main-buddyFeed-addFriendsContainer {
  background-color: var(--spice-main);
}

.main-buddyFeed-buddyFeedRoot,
.main-buddyFeed-buddyFeed,
aside[aria-label='Friend Activity'] {
  width: 280px;
  z-index: 0;
}

.main-buddyFeed-buddyFeedRoot .main-avatar-avatar,
aside[aria-label='Friend Activity'] .main-avatar-avatar {
  margin-right: 8px;
}

.main-buddyFeed-activityMetadata {
  max-width: 100vw;
}

/* settings */

.x-settings-equalizerContainer {
  border-radius: var(--border-radius-2);
  background-color: var(--spice-card);
}

.x-settings-crossFadeContainer {
  padding-right: 10px;
}

.main-dropDown-dropDown,
option {
  background-color: var(--spice-card) !important;
  color: var(--spice-text);
}

.main-dropDown-dropDown {
  border-radius: var(--border-radius-2) !important;
}

.x-toggle-indicator {
  background-color: var(--spice-card) !important;
}

.x-settings-facebookButton,
.main-connectToFacebook-facebookButton {
  color: var(--spice-shadow);
}

.x-toggle-indicatorWrapper {
  background-color: rgba(var(--spice-rgb-subtext), 0.3) !important;
}

.x-proxySettings-proxyInput {
  border-radius: var(--border-radius-2) !important;
  background-color: var(--spice-card) !important;
}

.x-proxySettings-proxyInput::placeholder {
  color: var(--spice-subtext);
}

.x-proxySettings-proxyInput:focus {
  border-color: var(--spice-button-active);
}

/* connect device menu */

._9eb5acf729a98d62135ca21777fef244-scss,
.connect-device-button {
  color: var(--spice-shadow);
}

.connect-device-list-container:before {
  border-top-color: transparent;
}

.connect-device-list-container {
  border-radius: var(--border-radius-1);
  border: 1px solid var(--spice-button-disabled);
}

.connect-device-list-item {
  margin: 0 8px;
  border-radius: var(--border-radius-2);
  width: -webkit-fill-available;
}

.connect-device-list-item:last-child {
  margin: 0 8px 8px;
}

.connect-device-list-item:focus,
.connect-device-list-item:hover {
  background-color: rgba(var(--spice-rgb-selected-row), 0.05);
}

.connect-header {
  display: none;
}

.connect-device-list-item--active,
.connect-device-list-item--active .connect-device-list-item__icon,
.connect-device-list-item--active .connect-device-list-item__device-subtitle {
  color: var(--spice-subtext);
}

.main-connectBar-connectBar {
  background-color: var(--spice-accent) !important;
  border-radius: 4px;
  height: 28px;
  width: 200px;
  padding: 8px;
  position: absolute;
  right: 6px;
  bottom: 106px;
  color: var(--spice-alt-text);
  box-shadow: 0px 0px 8px 4px rgba(0, 0, 0, 0.25) !important;
}

.main-connectBar-connectBar:after {
  border-bottom: none !important;
}

.main-connectBar-connectBar .icon,
.main-connectBar-connectBar .hDgDGI {
  margin: 0px;
  margin-right: 8px;
}
/* ... */

